# x11-event-monitor

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
src/: clipboard_sys.rs  keys  lib.rs  main.rs
src/c/: CMakeLists.txt  clipboard.c  clipboard.h  demo.c
