[package]
name = "x11-event-monitor"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "x-event-monitor"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.2"
libxdo-sys = "0.11.0"
libc = "0.2.132"
chrono = "0.4.22"

[build-dependencies]
cc = "1.0.73"